Made changes to getEnrolledCourses Method to get align with java 8